--- a/package.json
+++ b/package.json
@@ -9,6 +9,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.4"
+    "@astrojs/solid-js": "^5.1.3",
+    "@tailwindcss/vite": "^4.1.17",
+    "astro": "^5.16.4",
+    "astro-icon": "^1.1.5",
+    "solid-js": "^1.9.10",
+    "tailwindcss": "^4.1.17"
+  },
+  "devDependencies": {
+    "prettier": "^3.7.4",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
